--- a/app/globals.css
+++ b/app/globals.css
@@ -1062,3 +1062,20 @@
     display: flex !important;  
   }
 }
+
+
+
+@keyframes fadeUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-fadeUp {
+  animation: fadeUp 0.6s ease-out forwards;
+}
